@@ -61,9 +61,12 @@ footer	{ padding: 25px 10px 15px; text-align: center; font-size: 12px; color: #7
 #boxMobHearts img { width: 18px; }
 
 #boxMobCustomizer .boxCommand { padding: 20px 0; }
-#boxMobCustomizer .boxCommand span { width: 115px; }
+#boxMobCustomizer .boxCommand span { width: 115px; margin: 0px 0px 15px; }
+#boxMobCustomizer .boxCommand span:hover { border: 1px solid #0a0; margin: 0 0 14px; background-color: #0a0; }
 #boxMobCustomizer .boxCommand span.cmdSave 	{ background-image: url('../images/ico-save.png'); }
-#boxMobCustomizer .boxCommand span.cmdDelete{ background-image: url('../images/ico-delete.png'); }
+#boxMobCustomizer .boxCommand span.cmdReset	{ background-image: url('../images/ico-reload.png'); }
+#boxMobCustomizer .boxCommand span.cmdBack	{ background-image: url('../images/ico-back.png'); }
+#boxMobCustomizer .boxCommand span.cmdDelete	{ background-image: url('../images/ico-delete.png'); }
 
 #prop_global 	{ padding: 0 0 20px; }
 #prop_crep, 
